test/sematest/valid/null_in_method_call.java
class A {
  public static void main(String[] args) {
    new A().blub(null, 2);
  }

  public void blub(A a, int b){

  }
}