test/sematest/invalid/use_of_void2.java
class A {
  public static void main(String[] args) {

  }

  public void bla(void a){

  }
}